SQL tables and revised htmls pages

--- a/contact-support.html
+++ b/contact-support.html
@@ -343,6 +343,7 @@
               <option value="billing">Billing Issue</option>
               <option value="membership">Membership Problem</option>
               <option value="technical">Technical Issue</option>
+              <option value="Free Membership">Request free memebership</option>
               <option value="other">Other</option>
             </select>
           </div>
