--- a/header.html
+++ b/header.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Header with Hover Dropdown</title>
 
-    <!-- Link your global CSS if any -->
+    <!--  global CSS  -->
     <link rel="stylesheet" href="/frontend/css/styles.css" />
-    <!-- Link the header-specific CSS below -->
+    <!-- Link to CSS header  -->
     <link rel="stylesheet" href="header.css" />
   </head>
   <body>
