--- a/non members/member page.html
+++ b/non members/member page.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>All Memberships</title>
 
-    <!-- If you have a global CSS file -->
+    <!-- Link to global CSS file -->
     <link rel="stylesheet" href="/frontend/css/styles.css" />
 
     <!-- Page-specific / merged CSS -->
