--- a/community-membership.html
+++ b/community-membership.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Community Membership</title>
-    <!-- If you have a global CSS file -->
+    <!-- Link to global CSS file -->
     <link rel="stylesheet" href="/frontend/css/styles.css" />
 
     <!-- Inline (merged) CSS -->
