--- a/Members/UserDigitalContent.html
+++ b/Members/UserDigitalContent.html
@@ -125,7 +125,7 @@ body {
                     <h5>Under their Shadow</h5>
                 </div>
                 <div id="onTheBottom">   
-                <p class= "card-text">Learn how to move and exist in the shadow of one of the most elite universities in...</p>
+                <p class= "card-text">Learn how to move and exist in the shadow of one of the most elitist universities in...</p>
                     <a href="content.html" class="btn btn-view">View</a>
                 </div>
             </div>
