edited header.html so image pathing is correct and they get called. Installed new dependencies. Edited the benefits dashboard to allow saved progress which will get stored in DB

--- a/header.html
+++ b/header.html
@@ -6,7 +6,7 @@
     <title>Header with Hover Dropdown</title>
 
     <!-- Link your global CSS if any -->
-    <link rel="stylesheet" href="/frontend/css/styles.css" />
+    <link rel="stylesheet" href="./frontend/css/styles.css" />
     <!-- Link the header-specific CSS below -->
     <link rel="stylesheet" href="header.css" />
   </head>
@@ -16,7 +16,7 @@
       <!-- Left: Logo -->
       <div class="nav-header">
         <img
-          src="/frontend/images/TC_Logos-01.png"
+          src="./frontend/images/TC_Logos-01.png"
           alt="Together Culture Cambridge Logo"
         />
       </div>
@@ -44,8 +44,8 @@
       <!-- Right: Sign Up + Icons -->
       <div class="usr-panel">
         <button class="signup-btn">Sign Up</button>
-        <img src="/frontend/images/EmptyBag.svg" alt="Shopping Bag Icon" />
-        <img src="/frontend/images/GuestIcon.svg" alt="Guest Profile Icon" />
+        <img src="./frontend/images/EmptyBag.svg" alt="Shopping Bag Icon" />
+        <img src="./frontend/images/GuestIcon.svg" alt="Guest Profile Icon" />
       </div>
     </nav>
   </body>
