Basically just reorganizing with this commit. Pathing will be affected so it needs to be reviewed

--- a/frontend/header.html
+++ b/frontend/header.html
@@ -7,12 +7,8 @@
 
 
     <!-- Link your global CSS if any -->
-    <link rel="stylesheet" href="/frontend/css/styles.css" />
-    <!-- Link the header-specific CSS below -->
-
-    <!--  global CSS  -->
-    <link rel="stylesheet" href="/frontend/css/styles.css" />
-    <!-- Link to CSS header  -->
+    <link rel="stylesheet" href="css/styles.css" />
+    
 
     <link rel="stylesheet" href="header.css" />
   </head>
@@ -22,7 +18,7 @@
       <!-- Left: Logo -->
       <div class="nav-header">
         <img
-          src="./frontend/images/TC_Logos-01.png"
+          src="images/TC_Logos-01.png"
           alt="Together Culture Cambridge Logo"
         />
       </div>
@@ -34,24 +30,24 @@
 
           <!-- Only show sub-menu on direct hover over "Memberships" item -->
           <li class="dropdown">
-            <a href="#">Memberships</a>
+            <a href="non members/community-membership.html">Memberships</a>
             <ul class="dropdown-menu">
               <li><a href="#">Community</a></li>
-              <li><a href="#">Key Access</a></li>
-              <li><a href="#">Creative Workspace</a></li>
+              <li><a href="non members/key-access-membership.html">Key Access</a></li>
+              <li><a href="non members/workspace-application.html">Creative Workspace</a></li>
             </ul>
           </li>
 
-          <li><a href="#">Contact Us</a></li>
-          <li><a href="#">Events</a></li>
+          <li><a href="non members/contact-support.html">Contact Us</a></li>
+          <li><a href="non members/events.html">Events</a></li>
         </ul>
       </div>
 
       <!-- Right: Sign Up + Icons -->
       <div class="usr-panel">
         <button class="signup-btn">Sign Up</button>
-        <img src="./frontend/images/EmptyBag.svg" alt="Shopping Bag Icon" />
-        <img src="./frontend/images/GuestIcon.svg" alt="Guest Profile Icon" />
+        <img src="images/EmptyBag.svg" alt="Shopping Bag Icon" />
+        <img src="images/GuestIcon.svg" alt="Guest Profile Icon" />
       </div>
     </nav>
   </body>
