--- a/frontend/admin/event-report-detail.html
+++ b/frontend/admin/event-report-detail.html
@@ -8,7 +8,7 @@
     <nav class="navbar">
       <header class="nav-header">
         <div class="nav-image">
-          <img src="/frontend/images/TC_Logos-01.png" alt="PLACEHOLDER" />
+          <img src="../images/TC_Logos-01.png" alt="PLACEHOLDER" />
         </div>
       </header>
       <div class="nav-links">
@@ -20,7 +20,7 @@
       </div>
       <div class="usr-panel">
         <button href="#">Logout</button>
-        <img src="/frontend/images/GuestIcon.svg" alt="guest-profile-icon" />
+        <img src="../images/GuestIcon.svg" alt="guest-profile-icon" />
       </div>
     </nav>
 
@@ -262,7 +262,7 @@
             </div>
           </div>
           <div class="f-logo">
-            <img src="/frontend/images/PLACEHOLDER.svg" />
+            <img src="../images/PLACEHOLDER.svg" />
           </div>
         </div>
         <hr />
