add paging to events page

--- a/frontend/admin/event-report-detail.html
+++ b/frontend/admin/event-report-detail.html
@@ -13,9 +13,9 @@
       </header>
       <div class="nav-links">
         <ul>
-          <li><a href="member.html">Members</a></li>
-          <li><a href="event.html">Events</a></li>
-          <li><a href="event-report.html">Event Report</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Memberships</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </div>
       <div class="usr-panel">
@@ -236,7 +236,6 @@
               <ul>
                 <li><a href="/frontend/index.html">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Pricing</a></li>
                 <li><a href="#">Contact</a></li>
               </ul>
             </div>
