--- a/frontend/admin/event.html
+++ b/frontend/admin/event.html
@@ -267,17 +267,16 @@
         }
       ]
 
-      var columns = {
-        eventName: 'Name',
-        eventImage: 'Image',
-        eventDate: 'Date',
-        timePeriod: 'Time Period',
-        detail: 'Detail',
-        delete: 'Delete'
-      }
       var table = $('#table-sortable').tableSortable({
         data: data,
-        columns: columns,
+        columns: {
+          eventName: 'Name',
+          eventImage: 'Image',
+          eventDate: 'Date',
+          timePeriod: 'Time Period',
+          detail: 'Detail',
+          delete: 'Delete'
+        },
         rowsPerPage: 5,
         pagination: true,
         formatCell: function (row, key) {
