--- a/frontend/admin/event.html
+++ b/frontend/admin/event.html
@@ -12,14 +12,14 @@
     <nav class="navbar">
       <header class="nav-header">
         <div class="nav-image">
-          <img src="/frontend/images/TC_Logos-01.png" alt="PLACEHOLDER" />
+          <img src="/frontend/images/TC_Logos-01.png" alt="Together Culture CAMBRIDGE" />
         </div>
       </header>
       <div class="nav-links">
         <ul>
           <li><a href="#">About</a></li>
-          <li><a href="#">Memberships</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="./member.html">Memberships</a></li>
+          <li><a href="/frontend/non members/contact-support.html">Contact</a></li>
         </ul>
       </div>
       <div class="usr-panel">
