--- a/frontend/Members/UserDashBenefits.html
+++ b/frontend/Members/UserDashBenefits.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="UserDashboard.css">
 
 
-
+<!--Only having title for the photos and then on hover, the text appears -->
 
     <style>
         .icon {
